[gd_scene load_steps=3 format=2]

[ext_resource path="res://objects/O2Area.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.0688, 11.8024 )

[node name="O2Area" type="Node2D"]
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( -1.82316, 0 )
scale = Vector2( 1.08236, 1 )
color = Color( 0.0823529, 0.65098, 0.823529, 0.333333 )
polygon = PoolVector2Array( 1.69297, -0.0544071, 22.0323, 0.0331254, 22.1002, 23.4441, 1.75442, 23.5362 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 11.0379, 11.8334 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="."]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
